samples/_failures_safe/1761697443_af3f66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06444a8a.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_06444a8a.c:167:9: error: expected expression at end of input
  167 |         case TOKEN_STRING: return
      |         ^~~~
./samples/SAFE/__tmp_06444a8a.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06444a8a.c:167:9: error: expected declaration or statement at end of input
